--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^5.1.0",
     "ngx-flexible-layout": "^20.0.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
