--- a/angular.json
+++ b/angular.json
@@ -94,6 +94,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
+               "node_modules/swiper/swiper-bundle.min.css",
               "src/styles.scss"
             ]
           }
